home/centos/Docker-repo/tomcat/tomcat-ss.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-ss
  labels:
    app: tomcat-ss
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    name: http
  clusterIP: None
  selector:
    app: tomcat-ss

---

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: tomcat-ss
spec:
  serviceName: "tomcat-ss"
  replicas: 3
  template:
    metadata:
      labels:
        app: tomcat-ss
    spec:
      containers:
      - name: tomcat
        image: bitnami/tomcat
        ports:
        - name: tomcat
          containerPort: 8080
        volumeMounts:
          - name: tomcat-datadir
            mountPath: /bitnami/tomcat/data:z
          - name: tomcat-users
            mountPath: /bitnami/tomcat/conf/tomcat-users.xml
            subPath: tomcat-users.xml
      volumes:
        - name: tomcat-users
          configMap:
            name: tomcat-users
  volumeClaimTemplates:
  - metadata:
      name: tomcat-datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
