home/centos/Docker-repo/tomcat/tomcat.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  labels:
    app: tomcat
spec:
  type: NodePort
  ports: 
    - port: 30123
      targetPort: 8080
      protocol: TCP
      name: http
  selector: 
    app: tomcat

---

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: tomcat
spec:
  serviceName: tomcat
  replicas: 2
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: bitnami/tomcat
        ports:
        - containerPort: 8080
          hostPort: 30123
          name: tomcat
        volumeMounts:
        - name: tomcat
          mountPath: /opt/bitnami/tomcat/webapps:z
  volumeClaimTemplates:
  - metadata:
      name: tomcat
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
