home/centos/Docker-repo/tomcat/tomcat3.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  labels:
    app: tomcat
spec:
  type: NodePort
  ports: 
    - port: 30123
      targetPort: 8080
      protocol: TCP
      name: http
  selector: 
    app: tomcat
